--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.database-platform= org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.hibernate.ddl-auto: update
 spring.jpa.hibernate.dialect: org.hibernate.dialect.PostgreSQL9Dialect
+
+spring.thymeleaf.cache= false
